intermediate work stage

--- a/dog-project/dog_app.ipynb
+++ b/dog-project/dog_app.ipynb
@@ -59,22 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 133 total dog categories.\n",
-      "There are 8351 total dog images.\n",
-      "\n",
-      "There are 6680 training dog images.\n",
-      "There are 835 validation dog images.\n",
-      "There are 836 test dog images.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_files       \n",
     "from keras.utils import np_utils\n",
@@ -288,21 +275,7 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__ **For a novel or unstable algorithm, or one that has very limited application, this is an acceptable limitation.  However, most pictures are not taken with the specific aim to use them in such an algorithm, and for widescale use, it would be necessary for an algorithm to be able to cope with images that are less clear, may have partially blocked faces, and so forth.  If an image does not have a clearly presented face, it may be possible to do a partial feature match given the usual configuration of features on human faces - distance between eyes, nose, mouth, and so forth.  I'm not certain whether this can be accomplished by current algorithms, but in principle it should be possible, likely necessitating training with a large number of partially obscured human faces.**\n",
-    "\n",
-    "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## (Optional) TODO: Report the performance of another  \n",
-    "## face detection algorithm on the LFW dataset\n",
-    "### Feel free to use as many code cells as needed.\n",
-    "\n"
+    "**ANSWER: For a novel or unstable algorithm, or one that has very limited application, this is an acceptable limitation.  However, as most pictures are not taken with the specific aim to use them in such an algorithm, and for widescale use, it would be necessary for an algorithm to be able to cope with images that are less clear, may have partially blocked faces, and so forth.  If an image does not have a clearly presented face, it may be possible to do a partial feature match given the usual configuration of features on human faces - distance between eyes, nose, mouth, and so forth.  I'm not certain whether this can be accomplished by current algorithms, but in principle it should be possible, likely necessitating training with a large number of partially obscured human faces.**"
    ]
   },
   {
@@ -552,7 +525,7 @@
     "           \n",
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
     "\n",
-    "__Answer:__ **I started with the suggested architecture, and modified it to incorporate some of the suggestions in the resource below [1] regarding filter sizes, on the reasoning that the images and features are rather small.  The network structure otherwise seems fairly conventional for an image recognition network, which frequently have 32-64-128 or 32-32-64-64 (or similar) channel structures.  I err towards a greater number of channels, given the large number of features that must be learned for image recognition (especially something as fine-grained as determining breed).**\n",
+    "**ANSWER: I started with the suggested architecture, and modified it to incorporate some of the suggestions in the resource below [1] regarding filter sizes, on the reasoning that the images and features are rather small.  The network structure otherwise seems fairly conventional for an image recognition network, which frequently have 32-64-128 or 32-32-64-64 (or similar) channel structures.  I err towards a greater number of channels, given the large number of features that must be learned for image recognition (especially something as fine-grained as determining breed).**\n",
     "\n",
     "**The first layer takes in the images, and the following Max Pooling layer reduces the parameter space by down-sampling the image and reducing its dimensionality.  Additional layers create a deeper CNN, which creates higher abstractions of the data.  Global Average Pooling is used at the end, instead of Flattening, which minimizes overfitting by reducing the number of parameters in the model [2], whereas Flatten results in a larger Dense layer afterwards, and may lead to worse overfitting.  The size of the final Dense layer is equal to the number of possible dog breeds; i.e., 133.**\n",
     "\n",
@@ -1177,7 +1150,7 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer: To prevent overfitting, I aim to reduce the number of parameters (layers and layer sizes) in my model [1]. A very small initial model feeds the output of Resnet50 into the first layer, which being a Global Average Pooling layer, greatly reduces dimensionality and helps prevent overfitting.  The following layer is a Dense layer which classifies the image as one of 133 dog breeds.  This model achieves 80.6220% accuracy, which is a relatively impressive level.__\n",
+    "__ANSWER: To prevent overfitting, I aim to reduce the number of parameters (layers and layer sizes) in my model [1]. A very small initial model feeds the output of Resnet50 into the first layer, which being a Global Average Pooling layer, greatly reduces dimensionality and helps prevent overfitting.  The following layer is a Dense layer which classifies the image as one of 133 dog breeds.  This model achieves 80.6220% accuracy, which is a relatively impressive level.__\n",
     "\n",
     "[1] https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
    ]
@@ -1487,7 +1460,7 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:  The output is about what I expected - dogs and humans (and neither) are correctly classified.  The breed label is likely incorrect in the first case, although not too far off (https://en.wikipedia.org/wiki/German_Shorthaired_Pointer).  The second dog is (likely) correctly identified as a Golden Retriever, the other dogs are correctly or nearly-correctly labeled, the humans have dog breeds assigned to them, and the non-human and non-dog images (including the cat) are correctly identified as such.  Even the human with sunglasses is correctly identified as a human.__\n",
+    "__ANSWER: The output is about what I expected - dogs and humans (and neither) are correctly classified.  The breed label is likely incorrect in the first case, although not too far off (https://en.wikipedia.org/wiki/German_Shorthaired_Pointer).  The second dog is (likely) correctly identified as a Golden Retriever, the other dogs are correctly or nearly-correctly labeled, the humans have dog breeds assigned to them, and the non-human and non-dog images (including the cat) are correctly identified as such.  Even the human with sunglasses is correctly identified as a human.__\n",
     "\n",
     "__First, the accuracy of the algorithm could likely be improved through further tweaking of the dog breed model architecture, starting with previously successful image identification models (particularly those from a similar domain).  Second, the model could likely use more training on a greater number and variety of images of different breeds, particularly for those breeds that are obscure or easily confused for one another.  Finally, training the networks on random translations and rotations of the images may significantly improve performance.__ "
    ]
@@ -1790,7 +1763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
