--- a/finding-donors/finding_donors.ipynb
+++ b/finding-donors/finding_donors.ipynb
@@ -742,11 +742,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **\n",
+    "**ANSWER: **\n",
     "\n",
-    "I picked two Ensemble methods commonly used for the task of classification (see e.g. http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html) - one averaging method, and one boosting method.  I did not pick KNN, as it is relatively difficult to pick the right respective scales, especially for a mix of categorical and continuous variables (e.g., https://mathbabe.org/2013/04/04/k-nearest-neighbors-dangerously-simple/).  I also did not pick Naive Bayes, as it assumes feature independence, which is unlikely in the context of this data.  I wanted to use Logistic Regression, however, as having an output of probabilities allows for more flexibility after the fact, possibly based on other consideration, in deciding which probability threshold to use when determining whether to ask someone for donations.\n",
+    "**I picked two Ensemble methods commonly used for the task of classification (see e.g. http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html) - one averaging method, and one boosting method.  I did not pick KNN, as it is relatively difficult to pick the right respective scales, especially for a mix of categorical and continuous variables (e.g., https://mathbabe.org/2013/04/04/k-nearest-neighbors-dangerously-simple/).  I also did not pick Naive Bayes, as it assumes feature independence, which is unlikely in the context of this data.  I wanted to use Logistic Regression, however, as having an output of probabilities allows for more flexibility after the fact, possibly based on other consideration, in deciding which probability threshold to use when determining whether to ask someone for donations.**\n",
     "\n",
-    "For strengths and weaknesses of the relevant models, I primarily consulted the following sources, keeping in mind that heuristics do not necessarily apply to each data set:\n",
+    "**For strengths and weaknesses of the relevant models, I primarily consulted the following sources, keeping in mind that heuristics do not necessarily apply to each data set:**\n",
     "\n",
     "https://medium.com/@randylaosat/machine-learning-whats-inside-the-box-861f5c7e72a3\n",
     "\n",
@@ -756,29 +756,29 @@
     "\n",
     "https://hackernoon.com/boosting-algorithms-adaboost-gradient-boosting-and-xgboost-f74991cad38c\n",
     "\n",
-    "I crossed-checked specific information above with other sources to ensure that it was generally accepted.\n",
+    "**I crossed-checked specific information above with other sources to ensure that it was generally accepted.**\n",
     "\n",
     "#### Ensemble Methods: Random Forest\n",
     "\n",
-    "RF algorithms may for example be applied to the task of determining which medication would be most suitable to a patient, based on predictors such as gender, diagnosis, disease duration/progression, weight, and so forth.\n",
+    "**RF algorithms may for example be applied to the task of determining which medication would be most suitable to a patient, based on predictors such as gender, diagnosis, disease duration/progression, weight, and so forth.**\n",
     "\n",
-    "The strengths of this model are the following: it natively handles categorical variables; it is less prone to overfitting than a single decision tree -- therefore, it is more likely to select relevant features; and it frequently outperforms other methods on accuracy.  **These features in particular make this model a good candidate for this problem, which has numerous categorical variables (as well as continuous).  Given that after one-hot conversion, there were 103 total features, a model which will automatically select the most important features is of particular importance.**  Additionally, it can handle missing and imbalanced data, and is a flexible algorithm that does not require lots of parameter tuning.\n",
+    "**The strengths of this model are the following: it natively handles categorical variables; it is less prone to overfitting than a single decision tree -- therefore, it is more likely to select relevant features; and it frequently outperforms other methods on accuracy.  These features in particular make this model a good candidate for this problem, which has numerous categorical variables (as well as continuous).  Given that after one-hot conversion, there were 103 total features, a model which will automatically select the most important features is of particular importance.  Additionally, it can handle missing and imbalanced data, and is a flexible algorithm that does not require lots of parameter tuning.**\n",
     "\n",
-    "The weaknesses of this model are that it won't perform well with a bad set of features; it's not very transparent, and it's hard to interpret what's going on in the algorithm; further, too many trees can slow down the algorithm.\n",
+    "**The weaknesses of this model are that it won't perform well with a bad set of features; it's not very transparent, and it's hard to interpret what's going on in the algorithm; further, too many trees can slow down the algorithm.**\n",
     "\n",
     "#### Ensemble Methods: AdaBoost\n",
     "\n",
-    "AdaBoost is an adaptive algorithm used for facial recognition systems.  It is particularly well-suited for boosting the performance of decision trees on binary classification tasks.  It typically does not overfit despite excellent accuracy (although it is to date unclear exactly how), and frequently outperforms other methods.  **These features make it a good model to attempt for this problem, given that the algorithm can be used to boost the performance of classifiers that work well natively with categorical data, such as decision trees, and like RF will automatically select those features that are most important.**  It additionally handles missing variables (although this does not seem to be a particular problem with this dataset), and does not require variable transformation, and has relatively few parameters that need tweaking.\n",
+    "**AdaBoost is an adaptive algorithm used for facial recognition systems.  It is particularly well-suited for boosting the performance of decision trees on binary classification tasks.  It typically does not overfit despite excellent accuracy (although it is to date unclear exactly how), and frequently outperforms other methods.  These features make it a good model to attempt for this problem, given that the algorithm can be used to boost the performance of classifiers that work well natively with categorical data, such as decision trees, and like RF will automatically select those features that are most important.  It additionally handles missing variables (although this does not seem to be a particular problem with this dataset), and does not require variable transformation, and has relatively few parameters that need tweaking.**\n",
     "\n",
-    "The weaknesses of this model are that it does not deal well with noisy data, and the efficiency of the algorithm is affected by outliers, since the algorithm attempts to fit each point.\n",
+    "**The weaknesses of this model are that it does not deal well with noisy data, and the efficiency of the algorithm is affected by outliers, since the algorithm attempts to fit each point.**\n",
     "\n",
     "#### Logistic Regression\n",
     "\n",
-    "In medicine, logistic regression may be used for tasks such as determining which factors within a population do, or do not lead, to increased likelihood of a specific health event, such as a heart attack.\n",
+    "**In medicine, logistic regression may be used for tasks such as determining which factors within a population do, or do not lead, to increased likelihood of a specific health event, such as a heart attack.**\n",
     "\n",
-    "The strengths of this model are that it's fairly easy to interpret in terms of probabilities; relatively unlikely to overfit; fast; well-suited for binary classification tasks; and explanatory variables can be continuous or categorical.  **These features, and in particular the fact that results are probabilities, make this model a good candidate for this problem, since probabilities allow for post-hoc adjustment of the threshold for who should or should not be sent a donation request (e.g., depending on the budget, one may be able to send out requests to more people, even if some are less likely to donate)**.\n",
+    "**The strengths of this model are that it's fairly easy to interpret in terms of probabilities; relatively unlikely to overfit; fast; well-suited for binary classification tasks; and explanatory variables can be continuous or categorical.  These features, and in particular the fact that results are probabilities, make this model a good candidate for this problem, since probabilities allow for post-hoc adjustment of the threshold for who should or should not be sent a donation request (e.g., depending on the budget, one may be able to send out requests to more people, even if some are less likely to donate)**.\n",
     "\n",
-    "The downsides of this model are that it's not particularly good at capturing complex or non-linear relationships between features, or dealing with multiple/non-linear decision boundaries; generally, it's not very flexible."
+    "**The downsides of this model are that it's not particularly good at capturing complex or non-linear relationships between features, or dealing with multiple/non-linear decision boundaries; generally, it's not very flexible.**"
    ]
   },
   {
@@ -962,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The model performance plotted above suggests that AdaBoost is the best-suited algorithm.  All models were reasonably fast, although AdaBoost was slowest of the three.  The RF classifier appears prone to overfitting this data, while AdaBoost had the best performance (by a relatively small margin) on the test data, judging by accuracy and F-score.  All algorithms appear roughly equally well-suited to the data, with individual strengths (e.g., if it was important to get results in terms of probabilities, I would likely use Logistic Regression).  In practice, I would likely try fine-tuning at least two, or all three methods, and compare final performance.  In this case, I will use AdaBoost given its superior performance on metrics, given the testing set.**"
+    "**ANSWER: The model performance plotted above suggests that AdaBoost is the best-suited algorithm.  All models were reasonably fast, although AdaBoost was slowest of the three.  The RF classifier appears prone to overfitting this data, while AdaBoost had the best performance (by a relatively small margin) on the test data, judging by accuracy and F-score.  All algorithms appear roughly equally well-suited to the data, with individual strengths (e.g., if it was important to get results in terms of probabilities, I would likely use Logistic Regression).  In practice, I would likely try fine-tuning at least two, or all three methods, and compare final performance.  In this case, I will use AdaBoost given its superior performance on metrics, given the testing set.**"
    ]
   },
   {
@@ -979,11 +979,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: AdaBoost takes a family of weak classifiers, which may perform only slightly better than chance at correctly classifying any given point, combines them, and lets them 'vote' on the correct category of any given point.  When a large number of such weak classifiers vote on any given point, the chance that this point will be correctly classified increases significantly.  By default, AdaBoost uses decision tree classifiers to classify points, although it can use different base classifiers.  The process of classifying points continues either until each point is correctly classified in a labeled data set, or until the maximum number of iterations specified is reached.**\n",
+    "**ANSWER: AdaBoost takes a family of weak classifiers, which may perform only slightly better than chance at correctly classifying any given point, combines them, and lets them 'vote' on the correct category of any given point.  When a large number of such weak classifiers vote on any given point, the chance that this point will be correctly classified increases significantly.  By default, AdaBoost uses decision tree classifiers to classify points, although it can use different base classifiers.  The process of classifying points continues either until each point is correctly classified in a labeled data set, or until the maximum number of iterations specified is reached.**\n",
     "\n",
     "**The image below illustrates this: a weak classifier in Box 1 classifies several of the positive points correctly, but misclassifies the rest of the positive points.  The weights of the misclassified samples are then increased, and the next weak classifier (Box 2) is more likely to classify these points correctly.  The weights of misclassified samples is increased again, and the process repeats.  In the end, the weak classifiers are combined, and 'vote' on the category a given point belongs to:**\n",
     "\n",
@@ -1328,7 +1327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Both models are vast improvements on the performance of the naive predictor (accuracy score: 0.2478, F-score: 0.2917).  The optimized model offers a modest adantage on metrics (~1-2%) over the unoptimized model.  The model could likely be optimized further by trying additional base classifiers, and optimizing the parameters of the base AdaBoost classifier, but that is left for future work.**"
+    "**ANSWER: Both models are vast improvements on the performance of the naive predictor (accuracy score: 0.2478, F-score: 0.2917).  The optimized model offers a modest adantage on metrics (~1-2%) over the unoptimized model.  The model could likely be optimized further by trying additional base classifiers, and optimizing the parameters of the base AdaBoost classifier, but that is left for future work.**"
    ]
   },
   {
@@ -1357,11 +1356,11 @@
    "source": [
     "**Answer: The most important features are likely to be:**\n",
     "\n",
-    "* Age (one typically earns more with age, up to a certain point, and is likely to have more in savings).\n",
-    "* Occupation (some professions systematically earn more)\n",
-    "* Education (more education generally correlates with higher income)\n",
-    "* Capital gains (greater capital gains likely correlate with high income)\n",
-    "* Work class (type of employment, or absence of gainful employment, etc.)\n",
+    "* **Age (one typically earns more with age, up to a certain point, and is likely to have more in savings).**\n",
+    "* **Occupation (some professions systematically earn more)**\n",
+    "* **Education (more education generally correlates with higher income)**\n",
+    "* **Capital gains (greater capital gains likely correlate with high income)**\n",
+    "* **Work class (type of employment, or absence of gainful employment, etc.)**\n",
     "\n",
     "**I would rank these, given my current knowledge or intuition of what correlates best with wealth, as: capital gains > occupation > education > work class > age.**"
    ]
@@ -1425,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Unsurprisingly, education, capital gain, and age, are all important features.  I am not surprised that capital gain is the most important feature, but I am surprised that occupation or amount of education is not more influential.  Hours per week worked makes sense, although I would have expected that occupation and work class (which are likely highly correlated with hours worked per week) are more relevant.**"
+    "**ANSWER: Unsurprisingly, education, capital gain, and age, are all important features.  I am not surprised that capital gain is the most important feature, but I am surprised that occupation or amount of education is not more influential.  Hours per week worked makes sense, although I would have expected that occupation and work class (which are likely highly correlated with hours worked per week) are more relevant.**"
    ]
   },
   {
@@ -1494,7 +1493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: A model trained on reduced data performs noticeably worse than a model trained on the full data set.  I would consider these features in the future when gathering data for another dataset, if resources/computing time were limited, and if cutting out features improved performance, and/or if accuracy were not of paramount importance.**"
+    "**ANSWER: A model trained on reduced data performs noticeably worse than a model trained on the full data set.  I would consider these features in the future when gathering data for another dataset, if resources/computing time were limited, and if cutting out features improved performance, and/or if accuracy were not of paramount importance.**"
    ]
   },
   {
