--- a/customer-segments/customer_segments.ipynb
+++ b/customer-segments/customer_segments.ipynb
@@ -598,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Sample[0] is likely a small grocery store, as they are purchasing a disproportionate amount of the following: delicatessen, detergents/paper, and grocery.  Sample[1] purchases a disproportionate amount of fresh and frozen items, with some milk and grocery items - this may be a cafe or small restaurant.  Sample[2] could be a market specializing in fresh produce or perhaps a restaurant - they purchase a very large amount of fresh ingredients, and relatively little of everything else.**"
+    "**ANSWER: Sample[0] is likely a small grocery store, as they are purchasing a disproportionate amount of the following: delicatessen, detergents/paper, and grocery.  Sample[1] purchases a disproportionate amount of fresh and frozen items, with some milk and grocery items - this may be a cafe or small restaurant.  Sample[2] could be a market specializing in fresh produce or perhaps a restaurant - they purchase a very large amount of fresh ingredients, and relatively little of everything else.**"
    ]
   },
   {
@@ -672,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: I attempted to predict customer purchase patterns through their purchase of items in the Frozen category.  The reporeted $R^2$ is -0.2101 - incdicating that other features do not predict easily from this feature.  This suggests that patterns in the Frozen category may make unique predictions not captured by other features.**"
+    "**ANSWER: I attempted to predict customer purchase patterns through their purchase of items in the Frozen category.  The reporeted $R^2$ is -0.2101 - incdicating that other features do not predict easily from this feature.  This suggests that patterns in the Frozen category may make unique predictions not captured by other features.**"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:  The data is not normally distributed, with most of it positively skewed, with long tails on the right.  The feature pairs which exhibit the highest degree of correlation are Grocery and Detergents/Paper, followed by Milk and Grocery, and Milk and Detergents/Paper.  The data for all of those features is heavily positively skewed, and will need to be scaled.**"
+    "**ANSWER: The data is not normally distributed, and most of it is positively skewed, with long tails on the right.  The feature pairs which exhibit the highest degree of correlation are Grocery and Detergents/Paper, followed by Milk and Grocery, and Milk and Detergents/Paper.  The data for all of those features is heavily positively skewed, and will need to be scaled.**"
    ]
   },
   {
@@ -854,7 +854,7 @@
     "### Observation\n",
     "After applying a natural logarithm scaling to the data, the distribution of each feature should appear much more normal. For any pairs of features you may have identified earlier as being correlated, observe here whether that correlation is still present (and whether it is now stronger or weaker than before).\n",
     "\n",
-    "**Answer: The correlation is still present for all three feature pairs, although it is weaker for the Grocery and Detergents/Paper pair.**\n",
+    "**ANSWER: The correlation is still present for all three feature pairs, although it is weaker for the Grocery and Detergents/Paper pair.**\n",
     "\n",
     "Run the code below to see how the sample data has changed after having the natural logarithm applied to it."
    ]
@@ -1794,7 +1794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: There are data points which are outliers for more than one feature: 65, 66, 75, 128, and 154.  Normally, I would examine the data points in more detail to determine why they were outliers, and if the data was indeed anomalous, or whether excluding it would remove more signal than noise.  Here, I have very little information about the sources of the various data points, so I cannot evaluate this.  To avoid cutting out all data numerically anomalous, I will cut out all data anomalous in more than one category.**"
+    "**ANSWER: There are data points which are outliers for more than one feature: 65, 66, 75, 128, and 154.  Normally, I would examine the data points in more detail to determine why they were outliers, and if the data was indeed anomalous, or whether excluding it would remove more signal than noise.  Here, I have very little information about the sources of the various data points, so I cannot evaluate this.  To avoid cutting out all data numerically anomalous, I will cut out all data anomalous in more than one category.**"
    ]
   },
   {
@@ -1865,7 +1865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The first and second principal component explain about 70% of the variance in the data.  The first four together explain about 93% of the variance.  Although they do not explain much of the positive in milk and grocery purchases**\n",
+    "**ANSWER: The first and second principal component explain about 70% of the variance in the data.  The first four together explain about 93% of the variance.  Although they do not explain much of the positive in milk and grocery purchases**\n",
     "\n",
     "* **The 1st dimension accounts for much of the negative variance in Detergents/Paper, and to a lesser degree Milk and Grocery.  It accounts for some negative variance in the Delicatessen feature, and some positive variance in Fresh and Frozen.  It explains about 44% of the total variance in the data.  Overall, it primarily represents decreased spending on Detergets/Paper, Milk, and Grocery.**\n",
     "* **The 2nd dimension accounts for much of the negative variance in Fresh, Frozen, and Delicatessen, and a small amount of the negative variance in the remaining features.  It explains about 26% of the total variance in the data.  Overall, it primarily represents decreased spending in Fresh, Frozen, and Delicatessen.**\n",
@@ -1880,13 +1880,6 @@
     "### Observation\n",
     "Run the code below to see how the log-transformed sample data has changed after having a PCA transformation applied to it in six dimensions. Observe the numerical value for the first four dimensions of the sample points. Consider if this is consistent with your initial interpretation of the sample points."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2160,7 +2153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n",
+    "**ANSWER:**\n",
     "\n",
     "**The advantages of a K-Means clustering algorithm are faster runtimes, hard clustering, ease of interpretation and implementation, and suitability for high-dimensional data**\n",
     "\n",
@@ -2242,7 +2235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The silhouette score is as follows for the following numbers of clusters:**\n",
+    "**ANSWER: The silhouette score is as follows for the following numbers of clusters:**\n",
     "\n",
     "* 2: **0.4219**\n",
     "* 3: 0.4042\n",
@@ -2388,7 +2381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:  Cluster 0 disproportionally purchases fresh and frozen produce, comparatively little milk and grocery, and fairly little by way of detergents/paper and delicatessen items.  This might correspond to a food retailer, which disproportionately deals in fresh and frozen produce.  Cluster 1 disproportionately purchases grocery items, milk, and detergents/paper, while still making hefty purchases of fresh produce and delicatessen items, but relatively few frozen items.  This would correspond more to the profile of a cafe, restaurant, or other eating establishment.**"
+    "**ANSWER: Cluster 0 disproportionally purchases fresh and frozen produce, comparatively little milk and grocery, and fairly little by way of detergents/paper and delicatessen items.  This might correspond to a food retailer, which disproportionately deals in fresh and frozen produce.  Cluster 1 disproportionately purchases grocery items, milk, and detergents/paper, while still making hefty purchases of fresh produce and delicatessen items, but relatively few frozen items.  This would correspond more to the profile of a cafe, restaurant, or other eating establishment.**"
    ]
   },
   {
@@ -2428,7 +2421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The predictions I originally made for the three sample points are broadly consistent with this clustering  - although point 1 was more difficult for me to categorize, as it seemed consistent with either a cafe, or a food retailer.**"
+    "**ANSWER: The predictions I originally made for the three sample points are broadly consistent with this clustering  - although point 1 was more difficult for me to categorize, as it seemed consistent with either a cafe, or a food retailer.**"
    ]
   },
   {
@@ -2463,7 +2456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Those customers that depend most on delivery of fresh produce are likely to be more inconvenienced by a decrease in available delivery days, as fresh produce spoils more rapidly than other products, including milk products.  Customers that depend most on non-perishable goods, such as paper/detergents, or whose preferred perishable goods have a longer shelf life, may be less negatively affected by such a change.  Therefore, cluster 0 may be more likely to react negatively to this change.  The company may be able to test this by making a small random selection of customers in both clusters, making the change for only some customers in those selections, and confirming whether the change causes any difficulty for either group, and/or more difficulty for one group than other.**"
+    "**ANSWER: Those customers that depend most on delivery of fresh produce are likely to be more inconvenienced by a decrease in available delivery days, as fresh produce spoils more rapidly than other products, including milk products.  Customers that depend most on non-perishable goods, such as paper/detergents, or whose preferred perishable goods have a longer shelf life, may be less negatively affected by such a change.  Therefore, cluster 0 may be more likely to react negatively to this change.  The company may be able to test this by making a small random selection of customers in both clusters, making the change for only some customers in those selections, and confirming whether the change causes any difficulty for either group, and/or more difficulty for one group than other.**"
    ]
   },
   {
@@ -2481,7 +2474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:  One way to label these new customers is to use the projected dollar amount features for these customers.  A supervised learner could then be trained on the cluster-labeled data, which could learn which features predict membership in either one cluster, or the other.  This model could then be used to predict cluster membership for the new customers.**"
+    "**ANSWER: One way to label these new customers is to use the projected dollar amount features for these customers.  A supervised learner could then be trained on the cluster-labeled data, which could learn which features predict membership in either one cluster, or the other.  This model could then be used to predict cluster membership for the new customers.**"
    ]
   },
   {
@@ -2533,7 +2526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The number of clusters I've chose -- 2 -- matches the two labels of Retailer vs Hotel/Restaurant/Cafe.  These classifications would be broadly consistent with my previous definition of the customer segments.  The clustering algorithm produced a more categorical split, understandably, than the labeled data along these dimensions, but overall there are relatively few Retailers in the Eating Establishment category, and vice versa.  What is clear, however, is that the further away a given point is from the other cluster, the more unlikely it is that it belongs to the other cluster.**"
+    "**ANSWER: The number of clusters I've chosen -- 2 -- matches the two labels of Retailer vs Hotel/Restaurant/Cafe.  These classifications would be broadly consistent with my previous definition of the customer segments.  The clustering algorithm produced a more categorical split, understandably, than the labeled data along these dimensions, but overall there are relatively few Retailers in the Eating Establishment category, and vice versa.  What is clear, however, is that the further away a given point is from the other cluster, the more unlikely it is that it belongs to the other cluster.**"
    ]
   },
   {
